[gd_scene load_steps=5 format=3 uid="uid://b5paw82y1bbd2"]

[ext_resource type="Texture2D" uid="uid://d3ynl5pmtcjkh" path="res://resources/UI/shopSlot.PNG" id="1_io0id"]
[ext_resource type="Script" path="res://GameSystem/shop/itemSlot.gd" id="1_iojlv"]
[ext_resource type="Texture2D" uid="uid://duy7tcqqp6s45" path="res://resources/UI/coin.PNG" id="2_ewpb4"]
[ext_resource type="Texture2D" uid="uid://dr1xrow5dli80" path="res://resources/Sprout Lands - Sprites - premium pack/Objects/cow.png" id="2_ys8dt"]

[node name="Panel" type="Panel"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(85, 33)
offset_right = 85.0
offset_bottom = 33.0
script = ExtResource("1_iojlv")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
custom_minimum_size = Vector2(85, 27)
layout_mode = 0
offset_right = 85.0
offset_bottom = 33.0
texture = ExtResource("1_io0id")
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 50.0
offset_top = 19.0
offset_right = 81.0
offset_bottom = 30.0
color = Color(0.396078, 0.580392, 0.313726, 0.709804)

[node name="costLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 59.0
offset_top = 19.0
offset_right = 80.0
offset_bottom = 31.0
theme_override_font_sizes/font_size = 8
text = "0"
horizontal_alignment = 2

[node name="coinSprite" type="Sprite2D" parent="."]
position = Vector2(55, 24)
scale = Vector2(0.375, 0.375)
texture = ExtResource("2_ewpb4")

[node name="Button" type="Button" parent="."]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 50.0
offset_top = 19.0
offset_right = 81.0
offset_bottom = 30.0

[node name="nameLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = 1.0
offset_right = 83.0
offset_bottom = 13.0
theme_override_font_sizes/font_size = 6
text = "Item
"
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="Panel" type="Panel" parent="."]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 3.0
offset_top = 7.0
offset_right = 34.0
offset_bottom = 32.0

[node name="Sprite2D" type="Sprite2D" parent="Panel"]
position = Vector2(15, 14)
texture = ExtResource("2_ys8dt")

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
